fix: restore lost test coverage that the CI hardening exposed as real failures
The very first build after last commit's fleet-wide allowEmptyResults: false
change failed: api-gateway's Test stage hit "No test report files were
found. Configuration error?" This wasn't a false alarm — auditing all nine
services turned up a much larger regression than the one visible failure:

  api-gateway              0 test files (was 3)
  eureka-server            0 test files (was 3)
  identity-domain          0 test files (was 32)
  identity-infra           0 test files (was 30)
  identity-application     0 test files (was 17)
  order-infra              0 test files (never had any)
  order-application        0 test files (never had any)
  catalog-infra            0 test files (never had any)
  catalog-application      0 test files (never had any)

The five already-marked "(was N)" existed earlier this session but were lost
when main drifted independently (the same drift that dropped the
githubPush() trigger, fixed two commits ago). identity-service's loss was
worse than missing tests: User.java's role list had reverted from
List.copyOf back to Collections.unmodifiableList — the exact
privilege-escalation defect a test in that suite was written to catch.

Restored via `git checkout <original-commit> -- <path>`, not retyped, so the
content is guaranteed identical to what was already verified working:
  - ec9453e: identity's 79 tests across all three layers, and the User.java
    fix (confirmed this was the only divergence in that file — no unrelated
    changes to reconcile).
  - 6ceac95: the api-gateway and eureka-server smoke tests (Jenkinsfile
    changes from that commit were left alone; they're superseded by the
    fleet-wide reconciliation already on main).

order-service and product-catalog-service never had infra/application tests
to restore — these are new. Added smoke tests matching this session's
established patterns:
  - Infra: @DataJpaTest + a TestXxxInfraApplication b